# ChainAudit_LLMs

./: Cargo.toml  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.integration.yml  file_structure.txt  files_to_commit.txt  tested.py  verify-env.sh
config/dev/: auditor.toml
config/prod/: auditor.toml
examples/basic/: Dockerfile.mock  llm_mock.py
scripts/setup/: google_protos.sh  trillian_protos.sh
src/auditor/: Cargo.toml  build.rs
src/auditor/.sqlx/: query-c2f884035a499b34b6d0ccb35d87d90e542bffdbe8290c6cd2d8c22c90732fe7.json  query-f0237adbd3d65b9ab7b22c3af8411bc8254aa1b95a3cefc5a2040ecb3217c41f.json
src/auditor/migrations/: 20250213000000_init.sql
src/auditor/src/: config.rs  kafka.rs  main.rs  protos.rs  server.rs  signer.rs  storage.rs  trillian.rs
src/dashboard/backend/: Cargo.toml
src/dashboard/frontend/: README.md  index.html  package.json
src/dashboard/frontend/src/: App.tsx  theme.ts
src/dashboard/frontend/src/components/: AuditExportWizard.tsx  Layout.tsx  ModelLineageViewer.tsx  PrivacyBudgetDashboard.tsx  ReceiptExplorer.tsx  ThemeToggle.tsx
src/dashboard/frontend/src/hooks/: useLocalStorage.ts  useThemeMode.ts
src/dashboard/frontend/src/types/: graphql.ts
src/proxy/: Cargo.toml
src/proxy/src/: canonical.rs  lib.rs
src/proxy/src/auditor/: Cargo.toml
src/proxy/src/shared/utils/: Cargo.toml
src/proxy/src/verification/: Cargo.toml
src/shared/proto/: auditor.proto
src/verification/: Cargo.toml
src/verification/src/: main.rs  verify.rs
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
verillm_mock_data/: audit_export.json  model_lineage.json  privacy_budget.json  receipt_explorer.json  theme.json
