[package]
name = "verillm-auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
blake3 = "1.5"
ed25519-dalek = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json", "migrate", "chrono"] }
rdkafka = { version = "0.34", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
toml = "0.7"
base64 = "0.21"
chrono = "0.4"
sigstore = { git = "https://github.com/sigstore/sigstore-rs", branch = "main" }
rand = "0.8"
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
governor = "0.5"
