[package]
name = "verillm-dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
async-graphql = "5.0"
async-graphql-axum = "5.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"

[[bin]]
name = "verillm-dashboard-backend"
path = "src/main.rs"
